--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
-    "parcel": "^2.0.0-beta.1"
+    "@babel/plugin-proposal-export-default-from": "^7.10.4",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "parcel": "next"
   },
   "scripts": {
     "start": "parcel serve ./src/app/index.html",
