--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@material-ui/icons": "^4.9.1",
     "@material-ui/styles": "^4.10.0",
     "@reduxjs/toolkit": "^1.4.0",
+    "axios": "^0.19.2",
     "luxon": "^1.24.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
@@ -21,6 +22,7 @@
   "devDependencies": {
     "@babel/plugin-proposal-export-default-from": "^7.10.4",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "babel-plugin-transform-function-bind": "^6.22.0",
     "parcel": "next"
   },
   "scripts": {
