--- a/package.json
+++ b/package.json
@@ -2,12 +2,11 @@
   "name": "coding-challenge-doodle",
   "version": "0.0.1",
   "description": "Coding Challenge for Principal Dev",
-  "main": "index.js",
+  "main": "index.html",
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/styles": "^4.10.0",
-    "@reduxjs/toolkit": "^1.4.0",
     "axios": "^0.19.2",
     "luxon": "^1.24.1",
     "prop-types": "^15.7.2",
